app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app3
  labels:
    app: app3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      name: nginx-app3
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: testdockerramesh/nginx-app3
